# template-rs-cloudflare

./: .env.example  .gitignore  Cargo.toml  Dockerfile  QUICKSTART.md  README.md  SECURITY.md  docker-compose.yml  flake.nix  package-lock.json  package.json  wrangler.toml
.devcontainer/: devcontainer.json
.docker/: Dockerfile  docker-compose.yml  native.dockerfile  web.dockerfile  worker.dockerfile
.github/: dependabot.yml
.github/workflows/: clippy.yml  containers.yml  deploy.yml  docker.yml  release.yml  rust.yml
scripts/: build.sh
src/: cloudflare.rs  error.rs  lib.rs  macros.rs  utils.rs
src/app/: config.rs  context.rs  error.rs  interface.rs  mod.rs  routes.rs  state.rs  worker.rs
src/app/config/: context.rs  mod.rs  settings.rs
src/app/config/services/: database.rs
src/app/config/types/: db_uri.rs  endpoint.rs  mode.rs
src/app/interface/: impl_inner.rs  impl_interface.rs  impl_native.rs
src/app/routes/: index.rs
src/data/: mod.rs
src/data/models/: items.rs  mod.rs
src/macros/: enums.rs  fmt.rs  getter.rs  gsw.rs
src/primitives/: constants.rs  statics.rs
src/routes/: index.rs  mod.rs
src/types/: id.rs  message.rs  mod.rs
src/utils/: generate.rs  time.rs
