[package]
authors = [
    "FL03 <j3mccain@gmail.com>",
    "Scattered-Systems <support@scsys.io>"
]
default-run = "rscloud"
description = "A template worker application for Clouflare Workers"
edition = "2024"
keywords = ["axum", "cloudflare", "template", "wasm"]
license = "Apache-2.0"
name = "template-rs-cloudflare"
publish = false
readme = "README.md"
repository = "https://github.com/FL03/template-rs-cloudflare.git"
resolver = "3"
rust-version = "1.86"
version = "0.0.0"

[package.metadata.docs.rs]
all-features = false
features = ["full"]

[package.metadata.docs.rs.target.wasm32-unknown-unknown]
all-features = false
features = ["full", "wasm"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[[bin]]
name = "rscloud"
path = "bin/main.rs"

[lib]
bench = false
crate-type = ["cdylib", "rlib"]
name = "sdk"
path = "src/lib.rs"
doctest = false
test = true

[features]
default = [
    "time",
]

full = [
    "default",
    "chrono",
    "config",
    "tokio",
    "tower",
    "tracing",
    "uuid",
]

app = [
    "cf",
    "full",
]

# ************* [FF:Dependencies] *************
cf = [
    "dep:worker",
    "dep:worker-macros",
    "tower-service",
    "wasm",
]

chrono = ["dep:chrono"]

config = ["dep:config"]

http1 = [
    "axum/http1"
]

http2 = [
    "axum/http2"
]

time = ["dep:time"]

tokio = ["dep:tokio"]

tower = [
    "dep:tower",
    "dep:tower-http",
    "tower-http?/cors",
    "tower-http?/compression-full",
    "tower-http?/trace",
    "tower-http?/tower",
]

tower-service = ["dep:tower-service"]

tracing = [
    "dep:tracing",
    "axum/tracing",
    "tokio?/tracing",
]

uuid = [ 
    "dep:uuid",
    "uuid?/v4", 
]

# ************* [FF:Environments] *************
wasi = []

wasm = [
    "uuid?/js",
]

[dependencies]
config = { optional = true, version = "0.15" }
# api
axum = { default-features = false, features = ["json", "macros"], version = "0.8" }
tokio = { features = [], optional = true, version = "1" }
# data & serialization
bytes = { features = ["serde"], version = "1" }
serde = { features = ["derive"], version = "1" }
serde_derive = { version = "1" }
serde_json = { version = "1" }
# error handling
anyhow ={ version = "1" }
thiserror = { version = "2" }
# logging
tracing = { features = ["attributes", "log"], optional = true, version = "0.1" }
# randomization
uuid = { features = ["serde"], optional = true, version = "1" }
# middleware & networking
tower = { features = [], optional = true, version = "0.5" }
tower-http = { features = [], optional = true, version = "0.6" }
tower-service = { optional = true, version =  "0.3" }
url = { version = "2" }
# macros
paste = "1"
smart-default = { version = "0.7" }
strum = { features = ["derive"], version = "0.27" }
# time
chrono = { features = ["serde"], optional = true, version = "0.4" }
time = { features = ["serde"], optional = true, version = "0.3" }
# cloudflare
worker = { features = ["axum", "http"], optional = true, version = "0.5" }
worker-macros = { features = ["http"], optional = true, version = "0.5" }

[target.wasm32-unknown-unknown.dependencies]
console_error_panic_hook = "0.1"
# getrandom = { features = ["wasm_js"], version = "0.3" }

[profile.dev]
codegen-units = 16
debug = true
lto = true
opt-level = 2
overflow-checks = true
panic = "unwind"
strip = true

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = "z"
overflow-checks = false
panic = "abort"
strip = true
