[package]
authors = [
    "FL03 <j3mccain@gmail.com>",
    "Scattered-Systems <support@scsys.io>"
]
default-run = "rscloud"
description = "A template worker application for Clouflare Workers"
edition = "2024"
keywords = ["axum", "cloudflare", "template", "wasm"]
license = "Apache-2.0"
name = "template-rs-cloudflare"
publish = false
readme = "README.md"
repository = "https://github.com/FL03/template-rs-cloudflare.git"
resolver = "3"
rust-version = "1.85.0"
version = "0.0.0"

[package.metadata.docs.rs]
all-features = false
features = ["full"]

[package.metadata.docs.rs.target.wasm32-unknown-unknown]
all-features = false
features = ["full", "wasm"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[[bin]]
name = "rscloud"
path = "bin/main.rs"
required-features = ["native"]

[lib]
bench = false
crate-type = ["cdylib", "rlib"]
doctest = false
test = true

[features]
default = [
    "http1",
    "time",
]

full = [
    "default",
    "chrono",
    "config",
    "hyper",
    "tokio",
    "tower",
    "tracing-subscriber",
    "uuid",
]

native = [
    "full",
    "axum/tokio",
    "tokio?/full",
]

web = [
    "cf",
    "full",
    "wasm",
]

# ************* [FF:Dependencies] *************
cf = [
    "dep:worker",
    "dep:worker-macros",
    "tower",
]

chrono = [
    "dep:chrono",
    "tracing-subscriber?/chrono"
]

config = ["dep:config"]

console_error_panic_hook = [
    "dep:console_error_panic_hook"
]

http1 = [
    "axum/http1",
    "hyper?/http1",
]

http2 = [
    "axum/http2",
    "hyper?/http2",
]

hyper = [ 
    "dep:hyper",
    "dep:hyper-util",
]

multi-thread = [
    "tokio?/rt-multi-thread",
]

ws = [
    "axum/ws",
]

time = ["dep:time"]

tokio = [
    "dep:tokio",
    "tokio?/io-util",
    "tokio?/macros",
    "tokio?/rt",
    "tokio?/sync",
    "tokio?/time"
]

tower = [
    "dep:tower",
    "dep:tower-http",
    "dep:tower-service",
    "tower-http?/tower",
]

tracing = [
    "dep:tracing",
    "axum/tracing",
    "hyper-util/tracing",
    "tokio?/tracing",
    "tower?/tracing",
]

tracing-subscriber = [
    "dep:tracing-subscriber",
    "tracing",
]

uuid = [ 
    "dep:uuid",
    "uuid?/v4", 
]

# ************* [FF:Environments] *************
wasi = []

wasm = [
    "console_error_panic_hook",
    "chrono?/wasmbind",
    "time?/wasm-bindgen",
    "uuid?/js",
]

[dependencies]

# app
axum = { default-features = false, features = ["json", "macros"], version = "0.8" }
config = { optional = true, version = "0.15" }
tokio = { optional = true, version = "1" }
# data & serialization
bytes = { features = ["serde"], version = "1" }
serde = { features = ["derive"], version = "1" }
serde_derive = { version = "1" }
serde_json = { version = "1" }
# error handling
anyhow ={ version = "1" }
thiserror = { version = "2" }
# logging
tracing = { features = ["attributes", "log"], optional = true, version = "0.1" }
tracing-subscriber = { features = ["env-filter", "fmt"], optional = true, version = "0.3" }
# randomization
uuid = { features = ["serde"], optional = true, version = "1" }
# middleware & networking
futures = { version = "0.3" }
hyper = { optional = true, version = "1" }
hyper-util = { optional = true, version = "0.1" }
tower = { optional = true, version = "0.5" }
tower-service = { optional = true, version =  "0.3" }
url = { version = "2" }
# macros
paste = "1"
smart-default = { version = "0.7" }
strum = { features = ["derive"], version = "0.27" }
# time
chrono = { features = ["serde"], optional = true, version = "0.4" }
time = { features = ["macros", "serde"], optional = true, version = "0.3" }
# cloudflare
worker = { features = ["axum", "http"], optional = true, version = "0.6" }
worker-macros = { features = ["http"], optional = true, version = "0.6" }
# wasm
console_error_panic_hook = { optional = true, version = "0.1" }

[dependencies.tower-http]
optional = true
version = "0.6"
features = [
    "compression-full",
    "cors",
    "trace",
    "tower",
]

[profile.dev]
codegen-units = 16
debug = true
lto = "thin"
opt-level = 2
overflow-checks = true
panic = "unwind"
strip = "symbols"

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = 0
overflow-checks = false
panic = "abort"
strip = "debuginfo"
